Error Regex Tree and Node Phase 1